--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.application.name=journalapp
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+
+spring.data.mongodb.uri=mongodb+srv://meirshad07:WpKYTsJuFQ06Kvt4@cluster0.jl0ajab.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=journaldb
 spring.data.mongodb.auto-index-creation=true
 #spring.data.mongodb.username=myusername
