Save recovered files and updates on master

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -4,3 +4,8 @@ spring:
       uri: mongodb+srv://meirshad07:oxapibANQYEAJHwI@cluster0.jl0ajab.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
       database: journaldb
       auto-index-creation: true
+
+server:
+  servlet:
+    context-path: /prod
+  port: 8081
