--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.data.mongodb.uri=mongodb+srv://meirshad07:WpKYTsJuFQ06Kvt4@cluster0.jl0ajab.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.uri=mongodb+srv://meirshad07:oxapibANQYEAJHwI@cluster0.jl0ajab.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=journaldb
 spring.data.mongodb.auto-index-creation=true
 #spring.data.mongodb.username=myusername
