--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,12 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
+###log ###
+.idea/
+*.iml
+target/
+*.log
+.DS_Store
 
 ### VS Code ###
 .vscode/
